tyk/templates/tyk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: tyk
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-lets-encrypt
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
        - tyk.prinzba.ch
      secretName: tyk-tls-secret
  rules:
    - host: tyk.prinzba.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-svc-tyk-tyk-headless
                port:
                  name: https
